# SnakeGame-C-

./: CMakeLists.txt  Coords.cpp  Coords.h  Game.cpp  Game.h  Snake.cpp  Snake.h  common.h  main.cpp
